# Controle-de-gastos

./: .gitignore  README.md  hello.py  index.html  pyproject.toml
.github/workflows/: ci.yml
src/: app.py
tests/: test_app.py
